--- a/Proyecto Arzo/Validaciones/templates/Validaciones/abogadohomepage.html
+++ b/Proyecto Arzo/Validaciones/templates/Validaciones/abogadohomepage.html
@@ -81,7 +81,7 @@
                 <i class="fa-solid fa-bars"></i>
             </button>
             <div class="hamburger-opciones">
-                <a href="{% url 'Validaciones:Almacen' %}">Almacén</a>
+                <a href="{% url 'Validaciones:Almacen' %}?back=abogado">Almacén</a>
                 <a href="{% url 'Validaciones:login' %}">Cerrar sesión</a>
             </div>
         </div>
